# xmrig-amd

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  build.bat  xmrig.cbp
cmake/: OpenCL.cmake  cn-gpu.cmake  flags.cmake
doc/: DRIVERS.md  THREADS.md
res/: app.rc
src/: App.cpp  App.h  App_unix.cpp  App_win.cpp  Mem.cpp  Options.cpp  Options.h  Platform_unix.cpp  Summary.cpp  config.json  version.h  xcashAlgorithm.h  xmrig.cpp
src/amd/: GpuContext.h  OclCLI.cpp  OclCLI.h  OclCache.cpp  OclCache.h  OclCache_unix.cpp  OclCache_win.cpp  OclCryptonightR_gen.cpp  OclCryptonightR_gen.h  OclError.h  OclGPU.cpp  OclGPU.h  OclLib.cpp  OclLib.h  cryptonight.h
src/amd/opencl/: cryptonight.cl  cryptonight2.cl  cryptonight_gpu.cl  cryptonight_r.cl  fast_div_heavy.cl  fast_int_math_v2.cl  groestl256.cl  jh.cl  new 1.txt  wolf-aes.cl  wolf-skein.cl
src/amd/opencl/RandomX/: aes.cl  fillAes1Rx4.cl  randomx_constants_loki.h  randomx_constants_wow.h  randomx_run_gfx803.asm  randomx_run_gfx803.h  randomx_run_gfx900.asm  randomx_run_gfx900.h
src/api/: Api.h  ApiRouter.cpp  ApiRouter.h  ApiState.cpp  ApiState.h  Httpd.cpp  NetworkState.cpp  NetworkState.h
src/base/kernel/: Entry.cpp
src/base/net/: Pool.cpp
src/base/tools/: String.cpp
src/cc/: CCClient.cpp  CCClient.h  CCServer.h  ClientStatus.cpp  ClientStatus.h  ControlCommand.cpp  ControlCommand.h  GPUInfo.cpp  GPUInfo.h  Service.cpp  Service.h  Summary.cpp  XMRigd.cpp
src/common/: Platform_mac.cpp  Platform_unix.cpp  Platform_win.cpp  xmrig.h
src/common/config/: CommonConfig.cpp  CommonConfig.h  ConfigLoader.cpp
src/common/crypto/: Algorithm.cpp  Algorithm.h
src/common/interfaces/: IConfig.h
src/common/log/: Log.h  RemoteLog.cpp  RemoteLog.h  SysLog.cpp
src/common/net/: Client.cpp  Job.cpp  Job.h  Pool.cpp
src/common/utils/: timestamp.h
src/core/: Config.cpp  Config.h  ConfigLoader_default.h  ConfigLoader_platform.h  Controller.cpp  Controller.h  usage.h
src/crypto/: CryptoNight.cpp  CryptoNight.h  CryptoNight_constants.h  CryptoNight_monero.h  CryptoNight_p.h  CryptoNight_test.h  CryptoNight_x86.h
src/crypto/randomx/: virtual_machine.cpp
src/interfaces/: IConfig.h  IJobResultListener.h  IThread.h
src/log/: Log.h
src/net/: Job.h  Network.cpp  Network.h
src/net/strategies/: DonateStrategy.cpp  DonateStrategy.h
src/workers/: Benchmark.cpp  Benchmark.h  Handle.cpp  Handle.h  Hashrate.cpp  Hashrate.h  HashrateMonitor.cpp  HashrateMonitor.h  OclThread.cpp  OclThread.h  OclWorker.cpp  OclWorker.h  Workers.cpp  Workers.h
